--- a/ucleague-backend/ucleague-backend-ws/src/main/resources/application.yml
+++ b/ucleague-backend/ucleague-backend-ws/src/main/resources/application.yml
@@ -1,3 +1,6 @@
 server.servlet.context-path: /
 
 spring.h2.console.enabled: true
+#spring.jpa.show-sql: true
+#logging.level.org.hibernate.SQL: debug
+#logging.level.org.hibernate.type.descriptor.sql: trace
